(executable
 (name genlifter)
 (libraries ppx_tools compiler-libs)
 (modules Genlifter)
)

(rule
 (targets ast_lifter.ml)
 (deps genlifter.exe)
 (action (with-stdout-to %{targets}
          (run %{deps} -I %{ocaml-config:standard_library}/compiler-libs Parsetree.expression)))
)

(library
 (name learnocaml_ppx_metaquot_lib)
 (wrapped false)
 (flags :standard -w -17)
 (library_flags :standard -linkall)
 (modules Ast_lifter Ppx_metaquot)
 (libraries ppx_tools compiler-libs)
)

(library
 (name learnocaml_recorder)
 (wrapped false)
 (modules Recorder)
 (libraries ppxlib))

(library
 (name learnocaml_ppx_metaquot)
 (wrapped false)
 (libraries learnocaml_ppx_metaquot_lib ty fun_ty ocaml-migrate-parsetree learnocaml_recorder)
 (modules Ppx_metaquot_register)
 (kind ppx_rewriter)
)

(executable
 (name ppx_metaquot_main)
 (modules ppx_metaquot_main)
 (libraries learnocaml_ppx_metaquot))

(install
 (section libexec)
 (package learn-ocaml)
 (files
  (ppx_metaquot_main.exe as grading_ppx/learnocaml-ppx-metaquot))
)

(library
 (name ty)
 (wrapped false)
 (library_flags :standard -linkall)
 (modules Ty)
 (libraries compiler-libs)
)

(library
 (name fun_ty)
 (wrapped false)
 (library_flags :standard -linkall)
 (modules Fun_ty)
 (libraries ty)
)
