(library
 (name ast_convenience)
 (modules Ast_convenience)
 (preprocess (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (libraries compiler-libs.common)
)

(executable
 (name genlifter)
 (modules Genlifter)
 (preprocess (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (libraries ast_convenience)
)

(rule
 (targets ast_lifter.ml)
 (deps genlifter.exe)
 (action (with-stdout-to %{targets}
          (run %{deps} -I %{ocaml-config:standard_library}/compiler-libs Parsetree.expression)))
)

(library
 (name learnocaml_ppx_metaquot_lib)
 (wrapped false)
 (flags :standard -w -17)
 (library_flags :standard -linkall)
 (modules Ast_lifter Ppx_metaquot)
 (libraries ast_convenience)
)

(library
 (name ppx_autoregister)
 (wrapped false)
 (libraries ppxlib)
 (modules Ppx_autoregister Printer_recorder))

(library
 (name exercise_ppx)
 (wrapped false)
 (libraries ppx_autoregister)
 (modules Exercise_ppx)
 (kind ppx_rewriter)
)

(library
 (name grader_ppx)
 (wrapped false)
 (libraries learnocaml_ppx_metaquot_lib ty fun_ty ppx_autoregister)
 (modules Sampler_recorder Grader_ppx)
 (kind ppx_rewriter)
)

(executable
 (name exercise_ppx_main)
 (modules exercise_ppx_main)
 (libraries exercise_ppx))

(executable
 (name grader_ppx_main)
 (modules grader_ppx_main)
 (libraries grader_ppx))

(install
 (section libexec)
 (package learn-ocaml)
 (files (exercise_ppx_main.exe as test_lib/exercise-ppx)
        (grader_ppx_main.exe as test_lib/grader-ppx))
)

(library
 (name ty)
 (wrapped false)
 (library_flags :standard -linkall)
 (modules Ty)
 (libraries compiler-libs)
)

(library
 (name fun_ty)
 (wrapped false)
 (library_flags :standard -linkall)
 (modules Fun_ty)
 (libraries ty)
)
