(library
 (name learnocaml_server_lib)
 (wrapped false)
 (flags :standard -warn-error +8)
 (modules Learnocaml_server)
 (libraries json-data-encoding
            ezjsonm
            lwt.unix
            lwt_utils
            cohttp-lwt-unix
            magic-mime
	    sha
            checkseum.c
            decompress
            learnocaml_report
            learnocaml_data
            learnocaml_api
            learnocaml_store
	    ;; learnocaml_partition_create
            )
)
