(library
 (name learnocaml_server_lib)
 (wrapped false)
 (flags :standard -warn-error +8)
 (modules Learnocaml_server)
 (libraries json-data-encoding
            ezjsonm
            lwt.unix
            lwt_utils
            cohttp-lwt-unix
            magic-mime
	    sha
            checkseum.c
            decompress.de
            decompress.zl
            learnocaml_report
            learnocaml_data
            learnocaml_api
            learnocaml_auth
            learnocaml_store
	    learnocaml_partition_create
	    markup)
)
(library
 (name learnocaml_auth)
 (modules learnocaml_auth)
 (libraries lwt.unix 
            lwt_utils
	    cryptokit
	    learnocaml_store
 	    learnocaml_data)
)

