(rule
 (targets learnocaml_version.ml)
 (action (with-stdout-to %{targets}
           (echo "let v = \"%{read-strings:../../VERSION}\"")))
)

(library
 (name learnocaml_data)
 (wrapped false)
 (modules Learnocaml_data)
 (libraries asak
            sha
            learnocaml_toplevel_history
            learnocaml_report
            learnocaml_repository)
)

(library
  (name learnocaml_data_test)
  (wrapped false)
  (modules Learnocaml_data_test)
  (libraries learnocaml_data)
  (inline_tests)
  (preprocess (pps ppx_expect ppx_inline_test))
)

(library
 (name learnocaml_api)
 (wrapped false)
 (flags :standard -warn-error +8)
 (modules Learnocaml_version Learnocaml_api)
 (libraries ocplib-json-typed
            ezjsonm
            conduit
            learnocaml_data)
)

(library
 (name learnocaml_store)
 (wrapped false)
 (modules Learnocaml_store)
 (libraries lwt_utils learnocaml_api)
)
