(library
 (name learnocaml_toplevel_worker_messages)
 (wrapped false)
 (modes byte)
 (modules Learnocaml_toplevel_worker_messages)
 (modules_without_implementation Learnocaml_toplevel_worker_messages)
 (libraries js_of_ocaml
            toploop_results)
)

(library
 (name learnocaml_internal_intf)
 (wrapped false)
 (modules learnocaml_internal_intf)
 (modules_without_implementation learnocaml_internal_intf)
)

(executable
 (name learnocaml_toplevel_worker_main)
 (modes (byte js))
 (flags :standard -w -41 -warn-error -4-42-44-45-48-32-27)
 (link_flags :standard -linkall)
 (libraries jsutils
            js_of_ocaml
            js_of_ocaml-ppx
            toploop_jsoo
            toploop_results
            ocplib-ocamlres.runtime
            embedded_cmis
            learnocaml_internal_intf
            learnocaml_toplevel_worker_messages)
 (modules Learnocaml_toplevel_worker_main)
 (preprocess (pps js_of_ocaml-ppx))
 (js_of_ocaml (flags :standard +dynlink.js +toplevel.js
                     --toplevel --nocmis))
)

(library
 (name learnocaml_toplevel_history)
 (wrapped false)
 (libraries json-data-encoding)
 (modules Learnocaml_toplevel_history)
)

(library
  (name learnocaml_toplevel_pp)
  (wrapped false)
  (modes byte)
  (libraries vg gg vg.svg)
  (modules Learnocaml_toplevel_pp)
)

(library
 (name learnocaml_toplevel)
 (wrapped false)
 (modes byte)
 (flags :standard -w -9-41 -warn-error -27)
 (libraries toploop_results
            jsutils
            js_of_ocaml
            js_of_ocaml-ppx
            ocp-indent-nlfork.lib
            ace
            json-data-encoding
            learnocaml_toplevel_history
            learnocaml_toplevel_worker_messages
            learnocaml_toplevel_pp
            ocplib_i18n)
 (modules Learnocaml_toplevel_worker_caller
          Learnocaml_toplevel_output
          Learnocaml_toplevel_input
          Learnocaml_toplevel)
 (preprocess (pps ppx_ocplib_i18n js_of_ocaml-ppx))
 (preprocessor_deps (sandbox none))
)



(install
 (package learn-ocaml)
 (section share)
 (files (learnocaml_toplevel_worker_main.bc.js as www/js/learnocaml-toplevel-worker.js))
)
